fixed reports alignment issue
bg alignment issues

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -1482,8 +1482,8 @@ table.wp-list-table {
           display: flex;
           flex-wrap: wrap;
           flex-direction: row;
-          margin: 2px 0;
-         
+          margin: 5px 0;
+         align-items: center;
 		  
 
           .dlm-reports-top-downloads__overflower {
